# Celeris

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: celeris.hpp  request.hpp  response.hpp  router.hpp  server.hpp
include/celeris/: router.hpp
lib/: libboost_atomic.so.1.74.0  libboost_container.so.1.74.0  libboost_date_time.so.1.74.0  libboost_graph.so.1.74.0  libboost_log_setup.so.1.74.0  libboost_math_c99f.so.1.74.0  libboost_math_tr1.so.1.74.0  libboost_math_tr1l.so.1.74.0  libboost_prg_exec_monitor.so.1.74.0  libboost_program_options.so.1.74.0  libboost_regex.so.1.74.0  libboost_stacktrace_addr2line.so.1.74.0  libboost_stacktrace_backtrace.so.1.74.0  libboost_stacktrace_basic.so.1.74.0  libboost_stacktrace_noop.so.1.74.0  libboost_thread.so.1.74.0  libboost_unit_test_framework.so.1.74.0  libboost_wave.so.1.74.0
lib/cmake/boost_atomic-1.74.0/: libboost_atomic-variant-static.cmake
lib/cmake/boost_chrono-1.74.0/: boost_chrono-config.cmake  libboost_chrono-variant-shared.cmake
lib/cmake/boost_container-1.74.0/: libboost_container-variant-shared.cmake
lib/cmake/boost_context-1.74.0/: libboost_context-variant-shared.cmake  libboost_context-variant-static.cmake
lib/cmake/boost_coroutine-1.74.0/: libboost_coroutine-variant-shared.cmake
lib/cmake/boost_date_time-1.74.0/: libboost_date_time-variant-shared.cmake
lib/cmake/boost_exception-1.74.0/: boost_exception-config.cmake
lib/cmake/boost_fiber-1.74.0/: boost_fiber-config.cmake  libboost_fiber-variant-static.cmake
lib/cmake/boost_fiber_numa-1.74.0/: boost_fiber_numa-config.cmake
lib/cmake/boost_filesystem-1.74.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-shared.cmake  libboost_filesystem-variant-static.cmake
lib/cmake/boost_graph_parallel-1.74.0/: boost_graph_parallel-config.cmake
lib/cmake/boost_headers-1.74.0/: boost_headers-config.cmake
lib/cmake/boost_iostreams-1.74.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-static.cmake
lib/cmake/boost_locale-1.74.0/: libboost_locale-variant-static.cmake
lib/cmake/boost_log-1.74.0/: boost_log-config.cmake  libboost_log-variant-shared.cmake  libboost_log-variant-static.cmake
lib/cmake/boost_log_setup-1.74.0/: boost_log_setup-config.cmake  (+1 more)
lib/lib/: libboost_chrono.so.1.74.0  libboost_context.so.1.74.0  libboost_contract.so.1.74.0  libboost_coroutine.so.1.74.0  libboost_fiber.so.1.74.0  libboost_filesystem.so.1.74.0  libboost_iostreams.so.1.74.0  libboost_locale.so.1.74.0  libboost_log.so.1.74.0  libboost_math_c99.so.1.74.0  libboost_math_c99l.so.1.74.0  libboost_math_tr1f.so.1.74.0  libboost_nowide.so.1.74.0  libboost_random.so.1.74.0  libboost_serialization.so.1.74.0  libboost_system.so.1.74.0  libboost_timer.so.1.74.0  libboost_type_erasure.so.1.74.0  libboost_wserialization.so.1.74.0
src/: celeris.cpp  main.cpp  router.cpp  server.cpp
tests/: test.py
(+96 files in other folders)
